--- a/APIFramework2/APIFramework/APIFramework/Include/APIFramework.vcxproj
+++ b/APIFramework2/APIFramework/APIFramework/Include/APIFramework.vcxproj
@@ -149,12 +149,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animation\Animation.cpp" />
     <ClCompile Include="Core.cpp" />
     <ClCompile Include="Core\Camera.cpp" />
     <ClCompile Include="Core\Input.cpp" />
     <ClCompile Include="Core\PathManager.cpp" />
     <ClCompile Include="Core\Timer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="Object\Bullet.cpp" />
     <ClCompile Include="Object\Minion.cpp" />
     <ClCompile Include="Object\Mouse.cpp" />
@@ -176,6 +178,7 @@
     <ClCompile Include="Scene\StartScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation\Animation.h" />
     <ClInclude Include="Core.h" />
     <ClInclude Include="Core\Camera.h" />
     <ClInclude Include="Core\Input.h" />
@@ -184,6 +187,7 @@
     <ClInclude Include="Flag.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Macro.h" />
+    <ClInclude Include="Math.h" />
     <ClInclude Include="Object\Bullet.h" />
     <ClInclude Include="Object\Minion.h" />
     <ClInclude Include="Object\Mouse.h" />
