--- a/APIFramework2/Win32Project/APIFrameWork/Include/APIFrameWork.vcxproj.filters
+++ b/APIFramework2/Win32Project/APIFrameWork/Include/APIFrameWork.vcxproj.filters
@@ -67,6 +67,9 @@
     <Filter Include="06. Animation">
       <UniqueIdentifier>{84c5600c-2ebb-4152-b124-014e63eb4557}</UniqueIdentifier>
     </Filter>
+    <Filter Include="03. Object\01. MoveObj\04. UI">
+      <UniqueIdentifier>{fa2274bd-82fe-42c8-ac32-d8274d6e97a1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cpp">
@@ -101,9 +104,6 @@
     </ClCompile>
     <ClCompile Include="Object\StaticObj.cpp">
       <Filter>03. Object\02. StaticObj</Filter>
-    </ClCompile>
-    <ClCompile Include="Object\Bullet.cpp">
-      <Filter>03. Object\01. MoveObj\03. Bullet</Filter>
     </ClCompile>
     <ClCompile Include="Object\Player.cpp">
       <Filter>03. Object\01. MoveObj\01. Player</Filter>
@@ -149,6 +149,15 @@
     </ClCompile>
     <ClCompile Include="Animation\Animation.cpp">
       <Filter>06. Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="Object\Bullet.cpp">
+      <Filter>03. Object\01. MoveObj\04. UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UI.cpp">
+      <Filter>03. Object\01. MoveObj\04. UI</Filter>
+    </ClCompile>
+    <ClCompile Include="UIPanel.cpp">
+      <Filter>03. Object\01. MoveObj\04. UI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -244,6 +253,12 @@
     </ClInclude>
     <ClInclude Include="Animation\Animation.h">
       <Filter>06. Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\UI.h">
+      <Filter>03. Object\01. MoveObj\04. UI</Filter>
+    </ClInclude>
+    <ClInclude Include="UIPanel.h">
+      <Filter>03. Object\01. MoveObj\04. UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
